[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fz"
path = "src/fizzbuzz.rs"

[[bin]]
name = "kuku"
path = "src/kuku.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "coin"
path = "src/coin.rs"

[[bin]]
name = "enc"
path = "src/caeser_enc.rs"

[[bin]]
name = "enc2"
path = "src/caeser_enc_2.rs"

[[bin]]
name = "prime100"
path = "src/prime100.rs"

[[bin]]
name = "kakugen"
path = "src/kakugen.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pow"
path = "src/pow_1234_5678.rs"

[[bin]]
name = "dice"
path = "src/dice.rs"

[[bin]]
name = "range"
path = "src/range.rs"

[[bin]]
name = "maze"
path = "src/maze.rs"

[dependencies]
num-bigint = "0.4"
rand = "0.8.0"