[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256={version="0.13.0", features=["ecdh"]}
hex="0.4.3"
rand_core="0.6.3"
rand = "0.8.5"
sha2 = "0.10.6"
secp256k1 = {version = "0.26.0", features = ["rand", "global-context"]}
